# automatic_copy_writing

./: .gitignore  README.md  README_COMPONENTS.md  ai_director.py  ai_director_detailed.py  ai_director_response.json  api_response.json  check_models.py  child-sleep.csv  continue_conversation.py  copy_focused_loop.py  cost_simulator_demo.py  creative_loop.py  detailed_director_response.json  e-spirit.csv  green-da-ka-ra.csv  interaction.csv  interaction.csv.backup  interaction.json  main.tex  mock_visualization.html  pyproject.toml  references.bib  requirements.txt  research_prompts.md  sakura-kaze.csv  security-partner.csv  security.csv  streamlit_demo.py  streamlit_demo_2.py  streamlit_demo_3.py  streamlit_demo_4.py  streamlit_demo_5.py  streamlit_demo_6.py  streamlit_demo_6_1.py  streamlit_demo_6_1_価格推定用.py  streamlit_demo_7.py  streamlit_demo_gemini.py  streamlit_demo_gemini_api.py  test_streamlit.py  (+1 more)
.specstory/history/: 2025-05-30_09-44-untitled.md  2025-05-30_09-44Z-untitled.md  2025-05-30_10-38-抽象的な分析と整理.md  2025-05-30_10-38Z-抽象的な分析と整理.md  2025-05-30_10-41-深い研究のための調査ポイント.md  (+46 more)
components/framework-analysis/: Makefile  README.md  pyproject.toml  requirements.txt  setup.py
components/framework-analysis/output/framework_05_20250626_102306/: sos_analysis_result.json
components/framework-analysis/src/: framework_05_share_of_search.py
components/framework-analysis/tests/: test_framework_05.py
docs/: component_architecture_guide.md  design_philosophy.md  development_history.md  talks.md
scripts/: run_component.py
src/: run_all_frameworks.py
what-to-say-finder/: data_collection.md  how_to_say.md  what-to-say-finder.md  what_to_say.md
(+31 files in other folders)
