[project]
name = "automatic-copy-writing"
version = "0.1.0"
description = ""
authors = [
    {name = "NaokiKimura",email = "naoki.kimura.ac@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.46.1,<2.0.0)",
    "openai (>=1.93.0,<2.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "typing-extensions (>=4.14.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
